# sparkini

./: .gitignore  README.md  pyproject.toml  requirements.txt
docker/workspace/: dojo.scala  pyspark.ipynb  pyspark2.ipynb
docker/workspace/.ipynb_checkpoints/: pyspark-checkpoint.ipynb  scaladojo-checkpoint.ipynb
src/: foo2.py
