[tool.poetry]
name = "spark-dojo"
version = "0.1.0"
description = "dojo work for the spark pyspark"
authors = ["Nirav Patel <nirav.patel5@mail.dcu.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
